<resources>
    <string name="app_name">Photo editor v2</string>
    <string name="main_photo">Main Photo</string>
    <string name="open_image_button">OPEN</string>
    <string name="open_image">The photo has not been selected yet, take a picture or select from the gallery</string>
    <string name="button_next">NEXT</string>
    <string name="back_to_first_page">HOME</string>
    <string name="back">BACK</string>
    <string name="down_name_filters">Instruments</string>
    <string name="down_name_style">Styles</string>
    <string name="down_name_save">Save</string>
    <string name="name_turn_algorithm">Turn</string>
    <string name="name_color_correction_algorithm">Color correction</string>
    <string name="name_scaling_algorithm">Scaling</string>
    <string name="style_negative">Negative</string>
    <string name="style_red">Red</string>
    <string name="rotateBtn">TURN</string>
    <string name="scale_for_third_algorithm">SCALING</string>
    <string name="name_splines_algorithm">Splines</string>
    <string name="name_facerecognition_algorithm">Face recognition</string>
    <string name="recognizeBtn">RECOGNIZE</string>
    <string name="transformationBtn">TRANSFORMATION</string>
    <string name="clearBtn">CLEAR</string>
    <string name="IncreaseBtn">INCREASE CLARITY</string>
    <string name="name_blurredmasking_algorithm">Blurred masking</string>
    <string name="nameSizeBrushSeekBar">Brush size</string>
    <string name="nameRatioSeekBar">Ratio</string>
    <string name="name_retouching_algorithm">Retouching</string>
    <string name="multiplier_bar_text">multiplier: 1</string>
    <string name="threshold_bar_text">threshold: 50</string>
    <string name="radius_bar_text">radius: 5</string>
    <string name="inputAngle">Введите угол</string>
    <string name="inputKoef">Введите коэффицент</string>
</resources>