<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color">
    <View
        android:id="@+id/topBarPage2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/backToFirstPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/back_to_first_page"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/topBarPage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/topBarPage2"
        app:layout_constraintTop_toTopOf="@+id/topBarPage2"
        app:layout_constraintVertical_bias="0.516" />

    <ImageView
        android:id="@+id/CopyImageInput"
        android:layout_width="350dp"
        android:layout_height="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarPage2"
        app:layout_constraintVertical_bias="0.15">

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/battonSave"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/down_name_save"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/battonInstruments"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginEnd="43dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/down_name_filters"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/battonSave"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/battonStyle"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/down_name_style"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/battonInstruments"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>