<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color">

    <View
        android:id="@+id/topBarFilter7"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/topBarFilter7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/topBarFilter7"
        app:layout_constraintTop_toTopOf="@+id/topBarFilter7"
        app:layout_constraintVertical_bias="0.516" />

    <ImageView
        android:id="@+id/CopyImageInputFilter7"
        android:layout_width="350dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarFilter7"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/radiusSeekBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radius_bar_text"
        app:layout_constraintBottom_toTopOf="@+id/multiplierSeekBar"
        app:layout_constraintEnd_toStartOf="@+id/multiplierSeekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/radiusSeekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="10"
        android:min="1"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/multiplierSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CopyImageInputFilter7"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/multiplierSeekBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplier_bar_text"
        app:layout_constraintBottom_toTopOf="@+id/thresholdSeekBar"
        app:layout_constraintEnd_toEndOf="@+id/radiusSeekBarTextView"
        app:layout_constraintStart_toStartOf="@+id/radiusSeekBarTextView"
        app:layout_constraintTop_toBottomOf="@+id/radiusSeekBarTextView" />

    <SeekBar
        android:id="@+id/thresholdSeekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:max="200"
        android:min="50"
        android:progress="100"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/thresholdSeekBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threshold_bar_text"
        app:layout_constraintEnd_toEndOf="@+id/multiplierSeekBarTextView"
        app:layout_constraintStart_toStartOf="@+id/multiplierSeekBarTextView"
        app:layout_constraintTop_toBottomOf="@+id/multiplierSeekBarTextView" />

    <SeekBar
        android:id="@+id/multiplierSeekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="20"
        android:min="5"
        android:progress="10"
        app:layout_constraintBottom_toTopOf="@+id/thresholdSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/recognizeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/IncreaseBtn"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/saveBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_tikk" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>