<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/imageButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/open_image_button"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/topBar"
        app:layout_constraintTop_toTopOf="@+id/topBar" />

    <TextView
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/button_next"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/topBar"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/infoText"
        android:layout_width="0dp"
        android:layout_height="94dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/open_image"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waitPhoto" />

    <ImageView
        android:id="@+id/waitPhoto"
        android:layout_width="281dp"
        android:layout_height="281dp"
        app:layout_constraintBottom_toBottomOf="@+id/MainImageInput"
        app:layout_constraintEnd_toEndOf="@+id/MainImageInput"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/MainImageInput"
        app:layout_constraintTop_toTopOf="@+id/MainImageInput"
        app:layout_constraintVertical_bias="0.24"
        app:srcCompat="@drawable/ic_waitphoto" />

    <ImageView
        android:id="@+id/MainImageInput"
        android:layout_width="380dp"
        android:layout_height="610dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintVertical_bias="0.16" />

    <ImageView
        android:id="@+id/tapGallery"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tapCamera"
        app:srcCompat="@drawable/ic_gallery" />

    <ImageView
        android:id="@+id/tapCamera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_cameraa" />


</androidx.constraintlayout.widget.ConstraintLayout>