<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color">
    <View
        android:id="@+id/topBarFilter6"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/topBarFilter6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/topBarFilter6"
        app:layout_constraintTop_toTopOf="@+id/topBarFilter6"
        app:layout_constraintVertical_bias="0.516" />
    <ImageView
        android:id="@+id/CopyImageInputFilter6"
        android:layout_width="350dp"
        android:layout_height="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarFilter6"
        app:layout_constraintVertical_bias="0.15" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <SeekBar
            android:id="@+id/sizeBrushSeekBar"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/ratioSeekBar"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeBrushSeekBar"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/saveBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_tikk" />

        <TextView
            android:id="@+id/nameSizeBrushSeekBar"
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/nameSizeBrushSeekBar"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/sizeBrushSeekBar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameRatioSeekBar"
            android:layout_width="40dp"
            android:layout_height="18dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="43dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/nameRatioSeekBar"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/sizeBrushSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>